--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+label {
+  @apply sr-only;
+}
+
+input {
+  @apply rounded border border-black pl-2;
+}
+h1 {
+  @apply my-4 text-3xl font-bold text-cyan-900;
+}
+h2 {
+  @apply my-4 text-2xl font-bold text-cyan-900;
+}
